--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.d-flex{
   display: flex;
-  flex-direction: column;
+}
+.align-items-center{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.justify-content-between {
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  box-shadow: 0 8px 50px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.mt-3{
+  margin-top: 1rem;
+}
+
+.ml-1{
+  margin-left: 1rem;
+}
+.repo-list-container{
+  width: 70%;
+  padding: 10px 1rem;
+  margin: 0 auto;
+}
+
+.pr-1{
+  padding-left: 1rem;
+}
+
+.header-primary {
+  font-size: 1.5rem;
+  margin: 0 1rem;
+}
+
+.description{
+  margin: 0 1rem;
+  font-size: 1.1rem;
+}
+.box{
+  border: 2px solid lightgray;
+  padding: 0 1rem;
+  margin-right: .8rem;
+}
+
+@media screen and (max-width: 720px) {
+  /* .d-flex{
+    display: block;
+  } */
+  .repo-list-container {
+    width: 98%;
   }
 }
+
